--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div id="app">
-      <p>Hey</p>
+      {{ firstName }}
+      {{ lastName }}
     </div>
 
     <script src="https://unpkg.com/vue@next"></script>
