--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       {{ lastName }}
     </div>
 
+    <!-- <div id="app2">
+      {{ firstName }}
+      {{ lastName }}
+    </div> -->
+
     <script src="https://unpkg.com/vue@next"></script>
     <script src="app.js"></script>
   </body>
