--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     <div id="app" v-cloak>
       <p>{{ fullName() }}</p>
-      <p><a :href="url" target="blank">Google</a></p>
+      <p><a :href="url" target="_blank">Google</a></p>
+      <p v-html="raw_url"></p>
+
       <hr />
 
       <label>First Name</label>
