--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" v-model="firstName" />
 
       <label>Last Name</label>
-      <input type="text" :value="lastName" @input="updateLastName('Last name event Triggered!', $event)" />
+      <input type="text" :value="lastName" @input.prevent="updateLastName('Last name event Triggered!', $event)" />
 
       <button type="button" @click="increment">Increment</button>
       <button type="button" @click="age--">Decrement</button>
