--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <hr />
 
       <label>First Name</label>
-      <input type="text" v-model="firstName" />
+      <input type="text" v-model.lazy.trim="firstName" />
 
       <label>Middle Name</label>
       <input type="text" @keyup.enter="updateMiddleName" />
@@ -22,8 +22,11 @@
       <label>Last Name</label>
       <input type="text" :value="lastName" @input.prevent="updateLastName('Last name event Triggered!', $event)" />
 
+      <label>Age</label>
+      <input type="number" v-model.number="age" />
+
       <button type="button" @click="increment">Increment</button>
-      <button type="button" @click.ctrl="age--">Decrement</button>
+      <button type="button" @click="age--">Decrement</button>
     </div>
 
     <!-- <div id="app2">
